Add and configure Docker cotainer for spa and api.

--- a/spa/src/index.html
+++ b/spa/src/index.html
@@ -10,6 +10,9 @@
   <meta name="theme-color" content="#1976d2">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Load environment variables (https://pumpingco.de/blog/environment-variables-angular-docker/) -->
+  <script src="assets/env.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
